[gd_scene load_steps=4 format=3 uid="uid://oqalu7d3of4r"]

[ext_resource type="Script" path="res://scenes/levels/Timer3.gd" id="1_01gb7"]

[sub_resource type="LabelSettings" id="LabelSettings_dity6"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fshqn"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Timer3" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_01gb7")

[node name="Timer3" type="Timer" parent="."]

[node name="Minutes3" type="Label" parent="."]
offset_left = 6.0
offset_top = 52.0
offset_right = 46.0
offset_bottom = 75.0
text = "3:"
label_settings = SubResource("LabelSettings_dity6")

[node name="Seconds3" type="Label" parent="."]
offset_left = 4.0
offset_top = 52.0
offset_right = 44.0
offset_bottom = 75.0
text = "00"
label_settings = SubResource("LabelSettings_fshqn")
horizontal_alignment = 2

[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
